--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -5,6 +5,7 @@
     <title>Weather map</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/libs/leaflet.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/libs/leaflet.groupedlayercontrol.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}"/>
     <script src="{{ url_for('static', filename='js/libs/leaflet.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/jquery-core.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/jquery-ui.js') }}"></script>
@@ -14,7 +15,16 @@
 <body>
 <div id="map" style="width: 100%; height: 100%; position: absolute"></div>
 <script type="text/javascript">
-
+    var getRandomColor = function () {
+        var letters = '0123456789ABCDEF';
+        var color = '#';
+        for (var i = 0; i < 6; i++) {
+            color += letters[Math.floor(Math.random() * 16)];
+        }
+        return color;
+    };
+    var natural_hazard_catageroies = {{ categories|safe }};
+    var natural_hazard_catageroies_colors = {{ categories_colors|safe }}
     var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
         osmAttribution =
             'Map data <a target="_blank" href="http://www.openstreetmap.org">OpenStreetMap.org</a> contributors, ' +
@@ -69,6 +79,28 @@
         });
     map.addControl(L.control.groupedLayers(baseMaps, groupedOverlays));
 
+    // generate legend
+    var legend = L.control({position: 'bottomleft'});
+    legend.onAdd = function (map) {
+
+        var div = L.DomUtil.create('div', 'leaflet-control-layers leaflet-control info legend'),
+            labels = ['<strong>Categories</strong>'],
+            categories = Object.keys(natural_hazard_catageroies);
+
+        for (var i = 0; i < categories.length; i++) {
+
+            div.innerHTML += labels.push(
+                '<i class="circle" style="background:' +
+                natural_hazard_catageroies_colors[categories[i]] +
+                '"></i> ' +
+                (categories[i] ? categories[i] : '+')
+            );
+
+        }
+        div.innerHTML = labels.join('<br>');
+        return div;
+    };
+    legend.addTo(map);
 </script>
 </body>
 </html>
