--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -15,22 +15,46 @@
 <body>
 <div id="map" style="width: 100%; height: 100%; position: absolute"></div>
 <script type="text/javascript">
-    var getRandomColor = function () {
-        var letters = '0123456789ABCDEF';
-        var color = '#';
-        for (var i = 0; i < 6; i++) {
-            color += letters[Math.floor(Math.random() * 16)];
-        }
-        return color;
+    // var myIcon = L.icon({
+    //     iconUrl: 'leaflet-marker-icon leaflet-zoom-animated leaflet-clickabl',
+    //     iconSize: [32, 37],
+    //     iconAnchor: [16, 37],
+    //     popupAnchor: [0, -28]
+    // });
+
+    function onEachFeature(feature, layer) {
+        layer.bindPopup(feature.properties.name);
+    }
+
+    var showCategory = function (geoJson) {
+
+        L.geoJSON(geoJson, {
+            pointToLayer: function (feature, latlng) {
+                return L.marker(latlng);
+            },
+            onEachFeature: onEachFeature
+        }).addTo(map);
     };
+    var getCategory = function (id) {
+        var data = {'category_id': id};
+        $.post("/get_data_by_category", data = data, function (response_data, status) {
+            showCategory(response_data)
+        });
+    };
+
     var natural_hazard_catageroies = {{ categories|safe }};
-    var natural_hazard_catageroies_colors = {{ categories_colors|safe }}
+    var natural_hazard_catageroies_colors = {{ categories_colors|safe }};
+    var showLegend = function (input_object) {
+        data = getCategory(input_object.id);
+
+    };
     var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
         osmAttribution =
             'Map data <a target="_blank" href="http://www.openstreetmap.org">OpenStreetMap.org</a> contributors, ' +
             '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
         osmLayer = new L.TileLayer(osmUrl, {
             maxZoom: 18,
+            transparent: true,
             attribution: osmAttribution
         }),
         baseMaps = {
@@ -90,6 +114,9 @@
         for (var i = 0; i < categories.length; i++) {
 
             div.innerHTML += labels.push(
+                '<input type="checkbox" class="leaflet-control-layers-selector" id="' +
+                natural_hazard_catageroies[categories[i]] +
+                '" onchange="showLegend(this)">' +
                 '<i class="circle" style="background:' +
                 natural_hazard_catageroies_colors[categories[i]] +
                 '"></i> ' +
@@ -101,6 +128,7 @@
         return div;
     };
     legend.addTo(map);
+
 </script>
 </body>
 </html>
