--- a/main_app/static/css/custom.css
+++ b/main_app/static/css/custom.css
@@ -1,7 +1,8 @@
 
 .circle {
-    height: 10px;
-    width: 10px;
+    background-size: 2em;
+    height: 2em;
+    width: 2em;
     border-radius: 50%;
     display: inline-block;
 }
